<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    android:gravity="top">

    <TextView
        android:id="@+id/typeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"/>

    <LinearLayout
        android:id="@+id/expanded_row"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">
        <Button
            android:id="@+id/copy_to_clipboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dodaj_do_schowka" />
        <Button
            android:id="@+id/wiktionary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wiktionary" />
        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </LinearLayout>

</LinearLayout>